# ToyTemplates

./: .gitignore  CMakeLists.txt  LICENSE  README.md
pocket_tools/: CMakeLists.txt
pocket_tools/inc/: pocket_config.hpp  pocket_paramgen.hpp  pocket_tools.hpp
pocket_tools/tests/: pocket_config_test.cc  pocket_paramgen_test.cc
sdk_proto/: CMakeLists.txt
sdk_proto/inc/: bar.hpp  fooimp.hpp  foolib.h
sdk_proto/src/: bar.cc  fooiml.cc  foolib.cc
sdk_proto/test/: main.cc
